--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=HaggleMarket
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=root
+spring.datasource.password=asd54094182
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
